--- a/bt_style.css
+++ b/bt_style.css
@@ -36,7 +36,7 @@
 }
 
 .gwt-TestFocused{
-    border:none;
+    border:none !important;
 }
 
 .gwt-TestFocused::after{
@@ -156,7 +156,7 @@ span.ignoreBreaks {
     white-space: unset !important;
 }
 
-.shape_palette_widget .gwt-Image{
+.shape_palette_widget .gwt-Image[title]{
     width:32px !important;
     height: 32px !important;
 }
@@ -171,4 +171,26 @@ span.ignoreBreaks {
     padding: 6px 8px;
     border-bottom:solid 1px #dadada;
     user-select: none;
+}
+
+.bt-shape-handler:after{
+    content:'';
+    display: block;
+    width: 100%;
+    height: 100%;
+    box-shadow: inset 0 0 0 2px rgba(255,0,0,0.5);
+    position:absolute;
+    top:0;left:0;
+    z-index: 4;
+    border-radius: 3px;
+}
+
+.component_header .description_panel>p{
+    overflow: auto !important;
+    resize:vertical !important;
+    max-height: unset !important;
+}
+
+.component_header .description_panel textarea{
+    resize:vertical !important;
 }
